# fastapi-boilerplate

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  README_zh.md  docker-compose.yml  pyproject.toml  run.sh  test.sh
.github/workflows/: cd.yml  ci.yml
migration/alembic/: env.py
migration/alembic/versions/: 0001_init_user_table.py  0002_add_refresh_token_table.py
pipeline/: ci.sh
scripts/: deploy.sh  lint.sh  migrate.sh  run.sh  test.sh
src/: main.py
src/auth/: dto.py  handler.py  model.py  service.py
src/common/: erri.py
src/conf/: alembic_runner.py  config.py  db.py  logging.py  openapi.py
src/middleware/: auth.py  logging.py
src/tests/: run_tests.sh  test_auth_middleware.py  test_user_service.py
src/user/: dto.py  error.py  handler.py  model.py  service.py
tests/: cfg.yml  run.sh  run_unit.sh  test.yml
tests/integration/: conftest.py  test_auth_api.py  test_user_api.py
tests/unit/: test_auth_middleware.py  test_auth_service.py  test_logging_middleware.py  test_user_service.py
