[project]
name = "fastapi-boilerplate"
version = "0.1.0"
description = "A modern, production-ready FastAPI boilerplate"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "PyJWT>=2.9.0",
    "PyYAML>=6.0.0",
    "pydantic>=2.12.5",
    "psycopg[binary]>=3.2",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "sqlmodel>=0.0.31",
    "uvicorn[standard]>=0.40.0",
    "alembic>=1.17.2",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/integration"]
pythonpath = ["src"]
cache_dir = "output/.pytest_cache"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
]
ignore = ["E501"]  # line length is handled by formatter

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
mypy_path = "src"
explicit_package_bases = true
exclude = ["alembic/versions"]
